# sprs

./: .gitignore  .gitmodules  .travis.yml  .travis_nightly  .travis_rustfmt  Cargo.toml  Guidelines.rst  LICENSE-MIT  LICENSE.txt  README.md  README.rst  changelog.rst  dummy  index.html  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codecov.yml
0.3/: search-index.js
0.3/dense_mats/: enum.StorageOrder.html  index.html
0.3/dense_mats/array_like/: index.html  sidebar-items.js  trait.ArrayLike.html  (+1 more)
0.3/rand/: struct.AsciiGenerator.html  struct.Generator.html
benches/: sorting.rs  sparse_dense_products.rs  suite.rs
btbs/: Cargo.toml
btbs/src/: lib.rs
data/matrix_market/: simple.mm  simple_int.mm  symmetric.mm
doc/: search-index.js
doc/dense_mats/: index.html  sidebar-items.js
doc/itertools/: struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.Group.html  struct.GroupBy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.KMerge.html  struct.Linspace.html  struct.MendSlices.html  struct.Merge.html  struct.MergeBy.html  struct.MultiPeek.html  struct.PadUsing.html  struct.Product.html  struct.PutBack.html  struct.PutBackN.html  struct.RcIter.html  struct.RepeatCall.html  struct.RepeatN.html  struct.Step.html  struct.Stride.html  struct.StrideMut.html  struct.TakeWhileRef.html  struct.Tee.html  struct.Unfold.html  struct.Unique.html  struct.UniqueBy.html  struct.WhileSome.html  struct.Zip.html  struct.ZipLongest.html  struct.ZipSlices.html
doc/ndarray/: constant.S.html  enum.ErrorKind.html  enum.ShapeError.html  enum.StrideError.html  fn.arr0.html  fn.arr1.html  fn.arr2.html  fn.arr3.html  fn.aview0.html  fn.aview1.html  fn.aview2.html  fn.aview_mut1.html  fn.rcarr1.html  fn.rcarr2.html  fn.rcarr3.html  fn.stack.html  fn.zeros.html  index.html  macro.s!.html  macro.stack!.html  sidebar-items.js  struct.ArrayBase.html  struct.Axis.html  struct.AxisChunksIter.html  struct.AxisChunksIterMut.html  struct.Elements.html  struct.ElementsMut.html  struct.Indexed.html  struct.IndexedMut.html  struct.Indexes.html  struct.InnerIter.html  struct.InnerIterMut.html  struct.OuterIter.html  struct.OuterIterMut.html  struct.ShapeError.html  struct.Si.html  struct.ViewRepr.html  trait.AsArray.html  trait.Data.html  trait.DataClone.html  (+19 more)
doc/num/: fn.abs.html  fn.abs_sub.html  fn.one.html  fn.pow.html  fn.signum.html  fn.zero.html  index.html
doc/rand/: fn.random.html  fn.sample.html  fn.thread_rng.html  fn.weak_rng.html  struct.AsciiGenerator.html  struct.Closed01.html  struct.Generator.html  struct.Open01.html  struct.StdRng.html  struct.ThreadRng.html  struct.XorShiftRng.html  trait.Rand.html  trait.Rng.html  trait.SeedableRng.html
doc/rustc_serialize/: trait.Decodable.html  trait.DecoderHelpers.html  trait.Encodable.html  trait.EncoderHelpers.html
doc/sprs/: index.html  sidebar-items.js  type.Ix2.html  type.Ix_.html  type.SpRes.html
doc/src/: search-index.js
examples/: fill_in_reduction.rs  heat.rs
integration_tests/cholesky/: Cargo.toml
integration_tests/cholesky/src/: main.rs
sprs/: Cargo.toml
sprs-benches/: .gitignore  Cargo.toml  README.md  build.rs
sprs-benches/.cargo/: config  config.toml
sprs-benches/src/: bench_prod.rs  eigen.cpp  lib.rs  main.rs
sprs-ldl/: Cargo.toml  LICENSE-LGPL  README.md  README.rst
sprs-ldl/src/: lib.rs
sprs-rand/: Cargo.toml
sprs-rand/src/: lib.rs
sprs-tests/: Cargo.toml  README.md
sprs-tests/tests/: tests.rs
sprs/benches/: sparse_dense_products.rs
sprs/data/matrix_market/: pattern.mm  simple.mm  simple_int.mm
sprs/data/matrix_market/bad_files/: not_enough_entries.mm
sprs/data/matrix_market/complex/: hermitian-int.mtx  hermitian.mtx  simple.mtx  skew-symmetric.mtx  symmetric.mtx
sprs/examples/: heat.rs
sprs/src/: dense_vector.rs  errors.rs  indexing.rs  io.rs  lib.rs  mul_acc.rs  num_kinds.rs  num_matrixmarket.rs  sparse.rs  stack.rs
sprs/src/sparse/: binop.rs  compressed.rs  construct.rs  csmat.rs  indptr.rs  linalg.rs  permutation.rs  prod.rs  slicing.rs  smmp.rs  special_mats.rs  to_dense.rs  triplet.rs  triplet_iter.rs  vec.rs  visu.rs
sprs/src/sparse/linalg/: bicgstab.rs  etree.rs  ordering.rs  qmrcgstab.rs  trisolve.rs
sprs/tests/: bincode_ser.rs  gh374.rs
src/: array_backend.rs  dense_vector.rs  errors.rs  indexing.rs  io.rs  lib.rs  mul_acc.rs  num_kinds.rs  range.rs  sparse.rs  stack.rs  test_data.py  test_data.rs
src/dense/: mod.rs  vec.rs
src/io/: mod.rs
src/sparse/: add.rs  binop.rs  cmat.rs  compressed.rs  construct.rs  csmat.rs  csr.rs  indptr.rs  kronecker.rs  linalg.rs  mod.rs  permutation.rs  prod.rs  serde_traits.rs  slicing.rs  smmp.rs  special_mats.rs  symmetric.rs  to_dense.rs  triplet.rs  triplet_iter.rs  vec.rs  visu.rs
src/storage/: mod.rs  vec_slice.rs
suitesparse_bindings/sprs_suitesparse_camd/: Cargo.toml
suitesparse_bindings/sprs_suitesparse_camd/src/: lib.rs
suitesparse_bindings/sprs_suitesparse_ldl/: Cargo.toml  README.md
suitesparse_bindings/sprs_suitesparse_ldl/src/: lib.rs
suitesparse_bindings/sprs_suitesparse_umfpack/: Cargo.toml
suitesparse_bindings/sprs_suitesparse_umfpack/src/: lib.rs
suitesparse_bindings/suitesparse-src/: Cargo.toml  README.md  build.rs
suitesparse_bindings/suitesparse-src/src/: lib.rs
suitesparse_bindings/suitesparse_camd_sys/: Cargo.toml  build.rs
suitesparse_bindings/suitesparse_camd_sys/src/: lib.rs
suitesparse_bindings/suitesparse_ldl_sys/: Cargo.toml  README.md  README.rst  build.rs
suitesparse_bindings/suitesparse_ldl_sys/src/: lib.rs
suitesparse_bindings/suitesparse_umfpack_sys/: Cargo.toml  build.rs
suitesparse_bindings/suitesparse_umfpack_sys/src/: lib.rs  umfpack_free_numeric.rs  umfpack_free_symbolic.rs  umfpack_get_lunz.rs  umfpack_get_numeric.rs  umfpack_numeric.rs  umfpack_solve.rs  umfpack_symbolic.rs
tests/: bincode_ser.rs  outer_iterator.rs  slicing.rs
(+1426 files in other folders)
