[package]

name = "sprs"
description = "A sparse matrix library"
version = "0.9.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
edition = "2018"

readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vbarrielle/sprs"
documentation = "https://docs.rs/sprs"
keywords = ["sparse", "matrix", "linear", "algebra"]

exclude = [
    "data/*"
]

[features]
default = ["alga", "multi_thread"]
multi_thread = ["rayon", "num_cpus"]

[dependencies]
num-traits = "0.2.0"
ndarray = ">=0.11.0,<0.14"
alga = { version = "0.9.0", optional = true }
num-complex = "0.2.1"
serde = { version = "1.0.0", optional = true, features = ["derive"] }
smallvec = "1.4.0"
rayon = { version = "1.3.0", optional = true }
num_cpus = { version = "1.13.0", optional = true }
approx = { version = "0.3.2", optional = true }

[dev-dependencies]
bencher = "0.1.0"
tempdir = "0.3.5"
bincode = "1.2.0"
tobj = "2.0.0"
image = { version = "0.23.0", default-features = false, features = ["png"] }

[[bench]]
name = "suite"
harness = false

[[bench]]
name = "sparse_dense_products"
harness = false

[workspace]
members = [
    "sprs-ldl",
    "suitesparse_bindings/suitesparse_ldl_sys",
    "suitesparse_bindings/sprs_suitesparse_ldl",
    "suitesparse_bindings/suitesparse_camd_sys",
    "suitesparse_bindings/sprs_suitesparse_camd",
    "sprs-rand",
    "sprs-benches",
]

[package.metadata.docs.rs]
all-features = true
