[workspace]
members = [
    "sprs",
    "sprs-ldl",
    "suitesparse_bindings/suitesparse_ldl_sys",
    "suitesparse_bindings/sprs_suitesparse_ldl",
    "suitesparse_bindings/suitesparse_camd_sys",
    "suitesparse_bindings/sprs_suitesparse_camd",
    "suitesparse_bindings/suitesparse-src",
    "sprs-rand",
    "sprs-benches",
    "sprs-tests",
]

[workspace.package]
rust-version = "1.64"
