[package]
name = "sprs-benches"
version = "0.1.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
edition = "2018"
publish = false

[dependencies.sprs]
version = "0.10.0"
path = ".."

[dependencies.sprs-rand]
version = "0.3.0"
path = "../sprs-rand"

[dependencies.plotters]
version = "0.2.12"

[dependencies]
pyo3 = { version="0.11.1" }

[build-dependencies]
cc = "1.0.52"
reqwest = { version="0.10.4", features=["blocking"], optional=true }
tar = { version="0.4.26", optional=true }
libflate = {version="1.0.0", optional=true }

[features]

default = []
dl_eigen = ["reqwest", "tar", "libflate"]
eigen = []
