[package]
name = "sprs-benches"
version = "0.1.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
publish = false
rust-version.workspace = true
edition.workspace = true

[dependencies]
sprs = { version = "0.11.0", path = "../sprs" }
sprs-rand = { version = "0.4.0", path = "../sprs-rand" }
plotters = "0.3.4"
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }

[build-dependencies]
cc = "1.0.52"
reqwest = { version="0.11.16", features=["blocking"], optional=true }
tar = { version="0.4.26", optional=true }
libflate = { version="1.0.0", optional=true }

[features]
default = []
dl_eigen = ["dep:reqwest", "dep:tar", "dep:libflate"]
eigen = []
