[package]

name = "sprs-ldl"
description = "Sparse cholesky factorization"
version = "0.7.0"
authors = ["Vincent Barrielle"]
edition = "2018"

readme = "README.md"
license = "LGPL-2.1"
repository = "https://github.com/vbarrielle/sprs"
documentation = "https://vbarrielle.github.io/sprs/doc/sprs/"
keywords = ["sparse", "matrix", "cholesky", "factorization", "linalg"]

[dependencies]

num-traits = "0.1.32"


[dependencies.sprs]
version = "0.9.0"
path = ".."

[dependencies.sprs_suitesparse_ldl]
version = "0.5.0"
path = "../suitesparse_bindings/sprs_suitesparse_ldl"
optional = true

[dependencies.sprs_suitesparse_camd]
version = "0.1.0"
path = "../suitesparse_bindings/sprs_suitesparse_camd"
optional = true

[dev-dependencies]
ndarray = ">=0.11.0,<0.14"
