[package]
name = "sprs-rand"
description = "Random sparse matrix generation"
version = "0.3.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
license = "MIT OR Apache-2.0"
edition = "2018"
documentation = "https://docs.rs/sprs-rand"

[dependencies]
rand = "0.7.3"
rand_distr = "0.2.2"
rand_pcg = "0.2.1"

[dependencies.sprs]
version = "0.10.0"
path = ".."
