[package]
name = "sprs-rand"
description = "Random sparse matrix generation"
version = "0.4.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
documentation = "https://docs.rs/sprs-rand"
rust-version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
sprs = { version = "0.11.0", path = "../sprs" }
