[package]
name = "sprs-tests"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
publish = false
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dev-dependencies]
sprs = { path = "../sprs", features = ["serde"], default-features = false }
serde_json = "1.0.58"
