[package]
name = "sprs"
description = "A sparse matrix library"
version = "0.11.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
edition = "2018"

readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sparsemat/sprs"
documentation = "https://docs.rs/sprs"
keywords = ["sparse", "matrix", "linear", "algebra"]
rust-version.workspace = true

exclude = [
    "data/*"
]

[features]
default = ["alga", "multi_thread"]
multi_thread = ["rayon", "num_cpus"]

[dependencies]
num-traits = "0.2.0"
ndarray = "0.15"
alga = { version = "0.9.0", optional = true }
num-complex = "0.4.0"
serde = { version = "1.0.0", optional = true, features = ["derive"] }
smallvec = "1.4.0"
rayon = { version = "1.3.0", optional = true }
num_cpus = { version = "1.13.0", optional = true }
approx = { version = "0.5", optional = true }

[dev-dependencies]
num-derive = "0.3"
bencher = "0.1.0"
tempfile = "3.1.0"
bincode = "1.2.0"
tobj = "3.0"
image = { version = "0.23.0", default-features = false, features = ["png"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[[bench]]
name = "suite"
harness = false

[[bench]]
name = "sparse_dense_products"
harness = false

[[bench]]
name = "sorting"
harness = false

[package.metadata.docs.rs]
all-features = true
