[package]
name = "sprs"
description = "A sparse matrix library"
version = "0.11.3"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
readme = "../README.md"
repository = "https://github.com/sparsemat/sprs"
documentation = "https://docs.rs/sprs"
keywords = ["sparse", "matrix", "linear", "algebra"]
rust-version = "1.85.0"
edition.workspace = true
license.workspace = true

exclude = [
    "data/*"
]

[features]
default = ["alga", "multi_thread"]
multi_thread = ["dep:rayon", "dep:num_cpus"]

[dependencies]
num-traits = "0.2.0"
ndarray = ">=0.15.0, <0.18"
alga = { version = "0.9.0", optional = true }
num-complex = "0.4.0"
serde = { version = "1.0.0", optional = true, features = ["derive"] }
smallvec = "1.4.0"
rayon = { version = "1.7.0", optional = true }
num_cpus = { version = "1.13.0", optional = true }
approx = { version = "0.5", optional = true }

[dev-dependencies]
num-derive = "0.4"
bencher = "0.1.0"
tempfile = "3.1.0"
bincode = { version = "2.0.1", features = ["serde"] }
tobj = "4.0"
image = { version = "0.25.2", default-features = false, features = ["png"] }
rand = { version = "0.9", default-features = false, features = ["small_rng"] }

[[bench]]
name = "suite"
harness = false

[[bench]]
name = "sparse_dense_products"
harness = false

[[bench]]
name = "sorting"
harness = false

[package.metadata.docs.rs]
all-features = true
