[package]
name = "sprs_suitesparse_camd"
description = "sprs bindings to the suitesparse camd fill-in reducting ordering"
version = "0.3.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
edition = "2018"
keywords = ["sparse", "matrix", "fill-in", "permutation", "suitesparse"]
license = "MIT OR Apache-2.0"
rust-version.workspace = true

[dependencies.sprs]
version = "0.11.0"
path = "../../sprs"

[dependencies.suitesparse_camd_sys]
path = "../suitesparse_camd_sys/"
version = "0.1.1"
