[package]
name = "sprs_suitesparse_camd"
description = "sprs bindings to the suitesparse camd fill-in reducting ordering"
version = "0.3.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
keywords = ["sparse", "matrix", "fill-in", "permutation", "suitesparse"]
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
sprs = { version = "0.11.0", path = "../../sprs" }
suitesparse_camd_sys = { version = "0.1.1", path = "../suitesparse_camd_sys/" }
