[package]
name = "sprs_suitesparse_ldl"
description = "sprs bindings to the suitesparse ldl solver"
version = "0.7.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vbarrielle/sprs"
keywords = ["sparse", "matrix", "cholesky", "factorization", "suitesparse"]
readme = "README.md"
edition = "2018"

[dependencies]
num-traits = "0.2.0"
suitesparse_ldl_sys = { path = "../suitesparse_ldl_sys", version = "0.3.0" }

[dependencies.sprs]
version = "0.10.0"
path = "../.."
