[package]
name = "suitesparse-src"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2018"
build = "build.rs"
links = "suitesparse-src"
license-file = "SuiteSparse/LICENSE.txt"
readme = "README.md"
repository = "https://github.com/vbarrielle/sprs"
description = "Builds the SuiteSparse components"

[features]
camd = []
ldl = []

[dependencies]

[build-dependencies]
cc = "1.0.60"
