[package]
name = "suitesparse_ldl_sys"
description = "Raw bindings to SuiteSparse's LDL algorithm"
version = "0.2.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/vbarrielle/sprs"
keywords = ["sparse", "cholesky", "factorization", "suitesparse", "binding"]
edition = "2018"
build = "build.rs"
links = "ldl"

[features]
static = ["suitesparse-src/ldl"]

[dependencies]
libc = "0.2"
suitesparse-src = { path = "../suitesparse-src", optional = true }
