[package]
name = "suitesparse_ldl_sys"
description = "Raw bindings to SuiteSparse's LDL algorithm"
version = "0.3.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sparsemat/sprs"
keywords = ["sparse", "cholesky", "factorization", "suitesparse", "binding"]
edition = "2018"
build = "build.rs"
links = "ldl"
rust-version.workspace = true

[features]
static = ["suitesparse-src/ldl"]

[dependencies]
libc = "0.2"

[dependencies.suitesparse-src]
path = "../suitesparse-src"
version = "0.1.0"
optional = true
