[package]
name = "suitesparse_ldl_sys"
description = "Raw bindings to SuiteSparse's LDL algorithm"
version = "0.3.0"
authors = ["Vincent Barrielle <vincent.barrielle@m4x.org>"]
readme = "README.md"
repository = "https://github.com/sparsemat/sprs"
keywords = ["sparse", "cholesky", "factorization", "suitesparse", "binding"]
build = "build.rs"
links = "ldl"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[features]
static = ["dep:suitesparse-src", "suitesparse-src?/ldl"]

[dependencies]
suitesparse-src = { version = "0.1.0", path = "../suitesparse-src", optional = true }
