[package]
name = "suitesparse_umfpack_sys"
version = "0.1.0"
authors = ["James Logan <jlogan03@gmail.com>"]
edition = "2021"
description = "Raw bindings to SuiteSparse's UMFPACK collection"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "umfpack"
rust-version.workspace = true

[features]
static = ["suitesparse-src/umfpack"]

[dependencies]
libc = "0.2.74"

[dependencies.suitesparse-src]
path = "../suitesparse-src"
version = "0.1.0"
optional = true
