[package]
name = "suitesparse_umfpack_sys"
version = "0.1.0"
authors = ["James Logan <jlogan03@gmail.com>"]
description = "Raw bindings to SuiteSparse's UMFPACK collection"
build = "build.rs"
links = "umfpack"
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
